# apt-get-trade

./: .env.example  README.md  main.py  pyproject.toml
apt_get_trade/: main.py
apt_get_trade/application/account/: __init__.py  services.py
apt_get_trade/core/: config.py
apt_get_trade/domain/account/: __init__.py  models.py
apt_get_trade/infrastructure/external_services/: __init__.py  korea_investment_api.py
apt_get_trade/interfaces/api/: __init__.py  account_api.py
